# validator

./: .gitignore  Cargo.toml  README-en.md  README.md  test_build.sh
src/: ast.rs  lib.rs  parser.rs  token.rs  validator.rs
tests/: ast_test.rs  coverage_boost_test.rs  parser_test.rs  token_test.rs  validate_all_types_test.rs  validate_complex_type_test.rs  validate_rule_test.rs  validator_range_error_test.rs  validator_range_string_error_test.rs  validator_test.rs  validator_type_error_test.rs  validator_wrong_data_test.rs
